BIG commit. Completed, like, 85% of UI and linked activities. TODO: Add animal fun facts on animal activities TODO: Add animal noises on animal activities TODO: Somehow center name + volume icon on animal activities TODO: Create randomized radio-button quiz questions TODO: Possibly add count-up timer to time quiz completion TODO: Implement SubmitActivity to show score (and maybe time) TODO: Add some sort of image animation (e.g., animal jumps when noise is playing) if there's extra time to appease Mahe's creativity standards????

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BarnyardLearn">
         <activity
+            android:name=".SubmitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SheepActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GoatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HorseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChickenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PigActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CowActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LearnActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
