--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,7 @@
             android:name=".QuizActivity"
             android:exported="false" />
         <activity
-            android:name=".SheepActivity"
-            android:exported="false" />
-        <activity
-            android:name=".GoatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HorseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ChickenActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PigActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CowActivity"
+            android:name=".AnimalActivity"
             android:exported="false" />
         <activity
             android:name=".LearnActivity"
